@@ -53,5 +53,11 @@ x2gokdrive_DEPENDENCIES = @KDRIVE_LOCAL_LIBS@
 
 x2gokdrive_LDFLAGS = $(LD_EXPORT_SYMBOLS_FLAG)
 
+all-local:
+	echo 'Generated Makefile.in:'
+	cat 'Makefile.in'
+	echo 'Generated Makefile:'
+	cat 'Makefile'
+
 relink:
 	$(AM_V_at)rm -f $(bin_PROGRAMS) && $(MAKE) $(bin_PROGRAMS)
